# hype-or-flop

./: Anchor.toml  README.md  package.json
app/frontend/: .eslintrc.json  env.d.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json
app/frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
programs/hype-or-flop/: Cargo.toml
programs/hype-or-flop/src/: errors.rs  lib.rs
programs/hype-or-flop/src/instructions/: buy.rs  claim_admin_fee.rs  claim_fee.rs  create_market.rs  mod.rs  sell.rs
programs/hype-or-flop/src/state/: market.rs
sdk/: LICENSE  README.md  package.json
sdk/src/: index.ts
sdk/src/types/: hype_or_flop.ts  idl_hype_or_flop.json  index.ts
sdk/src/utils/: address.ts  constants.ts  string.ts
